[gd_scene load_steps=4 format=3 uid="uid://b3vdyc3n310f7"]

[ext_resource type="Script" path="res://MainMenu/MainMenuButtons.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dfvwmx10y6j7o" path="res://Assets/Images/Misc/MainMenu/play_button.png" id="2_bagk8"]
[ext_resource type="Theme" uid="uid://d3voewdqos1nj" path="res://Assets/Themes/text.tres" id="3_0bwq0"]

[node name="MainMenuButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="PlayShopQuit" type="Node2D" parent="."]
z_index = 1
position = Vector2(277, 145)

[node name="Play" type="Sprite2D" parent="PlayShopQuit"]

[node name="PlaySprite" type="Sprite2D" parent="PlayShopQuit/Play"]
scale = Vector2(6, 6)
texture = ExtResource("2_bagk8")

[node name="PlayLabel" type="Label" parent="PlayShopQuit/Play"]
offset_left = -150.0
offset_top = -67.0
offset_right = 532.0
offset_bottom = 95.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_0bwq0")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 38
text = "JOIN"
horizontal_alignment = 1

[node name="PlayBtn" type="Button" parent="PlayShopQuit"]
offset_left = -264.0
offset_top = -74.0
offset_right = 266.0
offset_bottom = 72.0
focus_mode = 0
flat = true

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = -28.0

[connection signal="mouse_entered" from="PlayShopQuit/PlayBtn" to="." method="_on_PlayBtn_mouse_entered"]
[connection signal="mouse_exited" from="PlayShopQuit/PlayBtn" to="." method="_on_PlayBtn_mouse_exited"]
[connection signal="pressed" from="PlayShopQuit/PlayBtn" to="." method="_on_PlayBtn_pressed"]
